--- a/app/src/main/res/drawable/button_dialog_main.xml
+++ b/app/src/main/res/drawable/button_dialog_main.xml
@@ -2,16 +2,17 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true">
         <shape>
-            <corners android:radius="@dimen/vs_5" />
-            <!--  选中按钮颜色   -->
-            <!--<solid android:color="@color/color_353744" />-->
-            <solid android:color="@color/color_1890FF" />
+            <corners android:radius="@dimen/vs_5"/>
+            <solid android:color="@color/color_1890FF"/>
         </shape>
     </item>
     <item android:state_focused="false">
         <shape>
-            <corners android:radius="@dimen/vs_5" />
-            <solid android:color="@color/color_CC353744" />
+            <corners android:radius="@dimen/vs_5"/>
+            <gradient
+                android:startColor="@color/color_CC353744"
+                android:endColor="@color/color_85000000"
+                android:angle="90.0"/>
         </shape>
     </item>
 </selector>
