--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,39 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_6200EE">#6200EE</color>
-    <color name="color_3700B3">#3700B3</color>
-    <color name="color_03DAC5">#03DAC5</color>
-    <color name="title_fouse_n">#ffce7900</color>
-    <color name="color_1890FF">#1890FF</color>
-    <color name="color_FFB800">#FF6600</color>
-    <color name="color_00FF0A">#00FF0A</color>
-    <color name="color_CBF46A">#CBF46A</color>
-    <color name="color_FF90CA09">#90CA09</color>
-    <color name="color_BD0CADE2">#BD0CADE2</color>
-    <color name="color_FF0057">#FF0057</color>
-    <color name="color_FF5F00">#FF5F00</color>
-    <color name="color_FFB6C1">#FFB6C1</color>
-    <color name="color_3D3D3D">#3D3D3D</color>
-    <color name="color_32364E">#32364E</color>
-    <color name="color_6632364E">#6632364E</color>
-    <color name="color_CCFFFFFF">#BBFFFFFF</color>
-    <color name="color_0CADE2">#0CADE2</color>
-    <color name="color_6CFFFFFF">#6CFFFFFF</color>
-    <color name="color_66000000">#66000000</color>
-    <color name="color_99000000">#99000000</color>
-    <color name="color_FFFFFF_50">#80FFFFFF</color>
-    <color name="color_CC000000">#CC000000</color>
-    <color name="color_000000_30">#48000000</color>
-    <color name="color_02F8E1">#02F8E1</color>
-    <color name="color_353744">#353744</color>
-    <color name="color_CC353744">#CC353744</color>
-    <color name="color_6C3D3D3D">#6c3d3d3d</color>
-    <color name="color_BBFFFFFF">#bbffffff</color>
-    <color name="color_FFFFFF">#ffffffff</color>
+    <color name="abc_decor_view_status_guard">#ff000000</color>
+    <color name="abc_decor_view_status_guard_light">#ffffffff</color>
+    <color name="abc_search_url_text_normal">#ff7fa87f</color>
+    <color name="abc_search_url_text_pressed">@android:color/black</color>
+    <color name="abc_search_url_text_selected">@android:color/black</color>
+    <color name="accent_material_dark">@color/material_deep_teal_200</color>
+    <color name="accent_material_light">@color/material_deep_teal_500</color>
+    <color name="androidx_core_ripple_material_light">#1f000000</color>
+    <color name="androidx_core_secondary_text_default_material_light">#8a000000</color>
+    <color name="background_floating_material_dark">@color/material_grey_800</color>
+    <color name="background_floating_material_light">@android:color/white</color>
+    <color name="background_material_dark">@color/material_grey_850</color>
+    <color name="background_material_light">@color/material_grey_50</color>
+    <color name="bright_foreground_disabled_material_dark">#80ffffff</color>
+    <color name="bright_foreground_disabled_material_light">#80000000</color>
+    <color name="bright_foreground_inverse_material_dark">@color/bright_foreground_material_light</color>
+    <color name="bright_foreground_inverse_material_light">@color/bright_foreground_material_dark</color>
+    <color name="bright_foreground_material_dark">@android:color/white</color>
+    <color name="bright_foreground_material_light">@android:color/black</color>
+    <color name="button_material_dark">#ff5a595b</color>
+    <color name="button_material_light">#ffd6d7d7</color>
+    <color name="color_00FF0A">#ff00ff0a</color>
+    <color name="color_02F8E1">#ff02f8e1</color>
+    <color name="color_03DAC5">#ff03dac5</color>
+    <color name="color_0CADE2">#ff0cade2</color>
+    <color name="color_1890FF">#ff1890ff</color>
+    <color name="color_32364E">#ff32364e</color>
     <color name="color_33FFFFFF">#33ffffff</color>
-    <color name="color_99FFFFFF">#4D000000</color>
+    <color name="color_353744">#ff353744</color>
+    <color name="color_3700B3">#ff3700b3</color>
+    <color name="color_3D3D3D">#ff3d3d3d</color>
     <color name="color_59353744">#59353744</color>
-    <color name="color_80FF0057">#66FF0057</color>
-    <color name="color_000000_60">#99000000</color>
-
+    <color name="color_6200EE">#ff6200ee</color>
+    <color name="color_66000000">#66000000</color>
+    <color name="color_6632364E">#6632364e</color>
+    <color name="color_6C3D3D3D">#6c3d3d3d</color>
+    <color name="color_6CFFFFFF">#6cffffff</color>
+    <color name="color_80FF0057">#ff1890ff</color>
+    <color name="color_99000000">#99000000</color>
+    <color name="color_99FFFFFF">#4d000000</color>
+    <color name="color_BBFFFFFF">#bbffffff</color>
+    <color name="color_BD0CADE2">#bd0cade2</color>
+    <color name="color_CBF46A">#ffcbf46a</color>
+    <color name="color_CC000000">#cc000000</color>
+    <color name="color_CC353744">#cc353744</color>
+    <color name="color_CCFFFFFF">#bbffffff</color>
+    <color name="color_FF0057">#ffff0057</color>
+    <color name="color_FF5F00">#ffff5f00</color>
+    <color name="color_FF90CA09">#ff90ca09</color>
+    <color name="color_FFB6C1">#ffffb6c1</color>
+    <color name="color_FFB800">#ffff6600</color>
+    <color name="color_FFFFFF">#ffffffff</color>
+    <color name="color_picker_background_color">#ffffffff</color>
+    <color name="color_picker_border_color">#ffb0b0b0</color>
+    <color name="dim_foreground_disabled_material_dark">#80bebebe</color>
+    <color name="dim_foreground_disabled_material_light">#80323232</color>
+    <color name="dim_foreground_material_dark">#ffbebebe</color>
+    <color name="dim_foreground_material_light">#ff323232</color>
+    <color name="dkplayer_background_color">#4d000000</color>
+    <color name="dkplayer_theme_color">#ff39c5bb</color>
+    <color name="dkplayer_theme_color_translucent">#9939c5bb</color>
+    <color name="dropdown_dark_divider_color">#ffc0c0c0</color>
+    <color name="dropdown_divider_color">#ffe5e5e5</color>
+    <color name="error_color_material_dark">#ffff7043</color>
+    <color name="error_color_material_light">#ffff5722</color>
+    <color name="foreground_material_dark">@android:color/white</color>
+    <color name="foreground_material_light">@android:color/black</color>
+    <color name="highlighted_text_material_dark">#6680cbc4</color>
+    <color name="highlighted_text_material_light">#66009688</color>
+    <color name="li_row_background">#fffbfbfb</color>
+    <color name="li_row_background_tint">#4027bfad</color>
+    <color name="li_row_selector">#4080cbc4</color>
+    <color name="material_blue_grey_800">#ff37474f</color>
+    <color name="material_blue_grey_900">#ff263238</color>
+    <color name="material_blue_grey_950">#ff21272b</color>
+    <color name="material_deep_teal_200">#ff80cbc4</color>
+    <color name="material_deep_teal_500">#ff008577</color>
+    <color name="material_grey_100">#fff5f5f5</color>
+    <color name="material_grey_300">#ffe0e0e0</color>
+    <color name="material_grey_50">#fffafafa</color>
+    <color name="material_grey_600">#ff757575</color>
+    <color name="material_grey_800">#ff424242</color>
+    <color name="material_grey_850">#ff303030</color>
+    <color name="material_grey_900">#ff212121</color>
+    <color name="notification_action_color_filter">#ffffffff</color>
+    <color name="notification_icon_bg_color">#ff9e9e9e</color>
+    <color name="notification_material_background_media_default_color">#ff424242</color>
+    <color name="primary_dark_material_dark">@android:color/black</color>
+    <color name="primary_dark_material_light">@color/material_grey_600</color>
+    <color name="primary_material_dark">@color/material_grey_900</color>
+    <color name="primary_material_light">@color/material_grey_100</color>
+    <color name="primary_text_default_material_dark">#ffffffff</color>
+    <color name="primary_text_default_material_light">#de000000</color>
+    <color name="primary_text_disabled_material_dark">#4dffffff</color>
+    <color name="primary_text_disabled_material_light">#39000000</color>
+    <color name="ripple_material_dark">#33ffffff</color>
+    <color name="ripple_material_light">#1f000000</color>
+    <color name="secondary_text_default_material_dark">#b3ffffff</color>
+    <color name="secondary_text_default_material_light">#8a000000</color>
+    <color name="secondary_text_disabled_material_dark">#36ffffff</color>
+    <color name="secondary_text_disabled_material_light">#24000000</color>
+    <color name="switch_thumb_disabled_material_dark">#ff616161</color>
+    <color name="switch_thumb_disabled_material_light">#ffbdbdbd</color>
+    <color name="switch_thumb_normal_material_dark">#ffbdbdbd</color>
+    <color name="switch_thumb_normal_material_light">#fff1f1f1</color>
+    <color name="title_fouse_n">#ffce7900</color>
+    <color name="tooltip_background_dark">#e6616161</color>
+    <color name="tooltip_background_light">#e6ffffff</color>
+    <color name="color_80000000">#cc000000</color>
+    <color name="color_85000000">#ff000000</color>
+    <color name="color_90000000">#00000000</color>
+    <color name="color_95000000">#ffffffff</color>
+	<color name="color_FFFFFF_50">#80FFFFFF</color>
+	<color name="color_000000_30">#48000000</color>
+	<color name="color_000000_60">#99000000</color>
 </resources>
