--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,89 +1,287 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="ts_16">16mm</dimen>
-    <dimen name="ts_20">20mm</dimen>
-    <dimen name="ts_22">22mm</dimen>
-    <dimen name="ts_24">24mm</dimen>
-    <dimen name="ts_26">26mm</dimen>
-    <dimen name="ts_28">28mm</dimen>
-    <dimen name="ts_30">30mm</dimen>
-    <dimen name="ts_34">34mm</dimen>
-    <dimen name="ts_40">40mm</dimen>
-    <dimen name="ts_50">50mm</dimen>
-    <dimen name="ts_100">100mm</dimen>
-
-    <dimen name="focus_border_1">1mm</dimen>
-    <dimen name="focus_border_2">2mm</dimen>
-    <dimen name="radius_5">5mm</dimen>
-    <dimen name="radius_10">8mm</dimen>
-    <dimen name="radius_20">20mm</dimen>
-
-    <dimen name="vs_4_">-4mm</dimen>
-    <dimen name="vs_20_">-20mm</dimen>
-    <dimen name="vs_25_">-25mm</dimen>
-    <dimen name="vs_60_">-60mm</dimen>
-
-    <dimen name="vs_0">0mm</dimen>
-    <dimen name="vs_1">1mm</dimen>
-    <dimen name="vs_2">2mm</dimen>
-    <dimen name="vs_3">3mm</dimen>
-    <dimen name="vs_4">4mm</dimen>
-    <dimen name="vs_5">5mm</dimen>
-    <dimen name="vs_6">6mm</dimen>
-    <dimen name="vs_7">7mm</dimen>
-    <dimen name="vs_8">8mm</dimen>
-    <dimen name="vs_10">10mm</dimen>
-    <dimen name="vs_12">12mm</dimen>
-    <dimen name="vs_15">15mm</dimen>
-    <dimen name="vs_20">20mm</dimen>
-    <dimen name="vs_24">24mm</dimen>
-    <dimen name="vs_28">28mm</dimen>
-    <dimen name="vs_30">30mm</dimen>
-    <dimen name="vs_35">35mm</dimen>
-    <dimen name="vs_40">40mm</dimen>
-    <dimen name="vs_45">45mm</dimen>
-    <dimen name="vs_48">48mm</dimen>
-    <dimen name="vs_50">50mm</dimen>
-    <dimen name="vs_60">60mm</dimen>
-    <dimen name="vs_70">70mm</dimen>
-    <dimen name="vs_76">76mm</dimen>
-    <dimen name="vs_80">80mm</dimen>
-    <dimen name="vs_90">90mm</dimen>
-    <dimen name="vs_100">100mm</dimen>
-    <dimen name="vs_108">108mm</dimen>
-    <dimen name="vs_120">120mm</dimen>
-    <dimen name="vs_128">128mm</dimen>
-    <dimen name="vs_130">130mm</dimen>
-    <dimen name="vs_140">140mm</dimen>
-    <dimen name="vs_150">150mm</dimen>
-    <dimen name="vs_160">160mm</dimen>
-    <dimen name="vs_162">162mm</dimen>
-    <dimen name="vs_165">165mm</dimen>
-    <dimen name="vs_170">170mm</dimen>
-    <dimen name="vs_180">180mm</dimen>
-    <dimen name="vs_190">190mm</dimen>
-    <dimen name="vs_200">200mm</dimen>
-    <dimen name="vs_214">214mm</dimen>
-    <dimen name="vs_220">220mm</dimen>
-    <dimen name="vs_230">230mm</dimen>
-    <dimen name="vs_240">240mm</dimen>
-    <dimen name="vs_250">250mm</dimen>
-    <dimen name="vs_270">270mm</dimen>
-    <dimen name="vs_280">280mm</dimen>
-    <dimen name="vs_300">300mm</dimen>
-    <dimen name="vs_320">320mm</dimen>
-    <dimen name="vs_340">340mm</dimen>
-    <dimen name="vs_360">360mm</dimen>
-    <dimen name="vs_390">390mm</dimen>
-    <dimen name="vs_400">400mm</dimen>
-    <dimen name="vs_420">420mm</dimen>
-    <dimen name="vs_440">440mm</dimen>
-    <dimen name="vs_410">410mm</dimen>
-    <dimen name="vs_470">470mm</dimen>
-    <dimen name="vs_480">480mm</dimen>
-    <dimen name="vs_600">600mm</dimen>
-    <dimen name="vs_610">610mm</dimen>
-    <dimen name="vs_640">640mm</dimen>
-    <dimen name="vs_720">720mm</dimen>
-    <dimen name="vs_960">960mm</dimen>
+    <dimen name="abc_action_bar_content_inset_material">16.0dip</dimen>
+    <dimen name="abc_action_bar_content_inset_with_nav">72.0dip</dimen>
+    <dimen name="abc_action_bar_default_height_material">56.0dip</dimen>
+    <dimen name="abc_action_bar_default_padding_end_material">0.0dip</dimen>
+    <dimen name="abc_action_bar_default_padding_start_material">0.0dip</dimen>
+    <dimen name="abc_action_bar_elevation_material">4.0dip</dimen>
+    <dimen name="abc_action_bar_icon_vertical_padding_material">16.0dip</dimen>
+    <dimen name="abc_action_bar_overflow_padding_end_material">10.0dip</dimen>
+    <dimen name="abc_action_bar_overflow_padding_start_material">6.0dip</dimen>
+    <dimen name="abc_action_bar_stacked_max_height">48.0dip</dimen>
+    <dimen name="abc_action_bar_stacked_tab_max_width">180.0dip</dimen>
+    <dimen name="abc_action_bar_subtitle_bottom_margin_material">5.0dip</dimen>
+    <dimen name="abc_action_bar_subtitle_top_margin_material">-3.0dip</dimen>
+    <dimen name="abc_action_button_min_height_material">48.0dip</dimen>
+    <dimen name="abc_action_button_min_width_material">48.0dip</dimen>
+    <dimen name="abc_action_button_min_width_overflow_material">36.0dip</dimen>
+    <dimen name="abc_alert_dialog_button_bar_height">48.0dip</dimen>
+    <dimen name="abc_alert_dialog_button_dimen">48.0dip</dimen>
+    <item
+        type="dimen"
+        name="abc_button_inset_horizontal_material">@dimen/abc_control_inset_material</item>
+    <dimen name="abc_button_inset_vertical_material">6.0dip</dimen>
+    <dimen name="abc_button_padding_horizontal_material">8.0dip</dimen>
+    <item
+        type="dimen"
+        name="abc_button_padding_vertical_material">@dimen/abc_control_padding_material</item>
+    <dimen name="abc_cascading_menus_min_smallest_width">720.0dip</dimen>
+    <dimen name="abc_config_prefDialogWidth">320.0dip</dimen>
+    <dimen name="abc_control_corner_material">2.0dip</dimen>
+    <dimen name="abc_control_inset_material">4.0dip</dimen>
+    <dimen name="abc_control_padding_material">4.0dip</dimen>
+    <dimen name="abc_dialog_corner_radius_material">2.0dip</dimen>
+    <item
+        type="dimen"
+        name="abc_dialog_fixed_height_major">79.99999%</item>
+    <item
+        type="dimen"
+        name="abc_dialog_fixed_height_minor">100.0%</item>
+    <dimen name="abc_dialog_fixed_width_major">320.0dip</dimen>
+    <dimen name="abc_dialog_fixed_width_minor">320.0dip</dimen>
+    <dimen name="abc_dialog_list_padding_bottom_no_buttons">8.0dip</dimen>
+    <dimen name="abc_dialog_list_padding_top_no_title">8.0dip</dimen>
+    <item
+        type="dimen"
+        name="abc_dialog_min_width_major">65.0%</item>
+    <item
+        type="dimen"
+        name="abc_dialog_min_width_minor">95.00001%</item>
+    <dimen name="abc_dialog_padding_material">24.0dip</dimen>
+    <dimen name="abc_dialog_padding_top_material">18.0dip</dimen>
+    <dimen name="abc_dialog_title_divider_material">8.0dip</dimen>
+    <item
+        type="dimen"
+        name="abc_disabled_alpha_material_dark">0.3</item>
+    <item
+        type="dimen"
+        name="abc_disabled_alpha_material_light">0.26</item>
+    <dimen name="abc_dropdownitem_icon_width">32.0dip</dimen>
+    <dimen name="abc_dropdownitem_text_padding_left">8.0dip</dimen>
+    <dimen name="abc_dropdownitem_text_padding_right">8.0dip</dimen>
+    <dimen name="abc_edit_text_inset_bottom_material">7.0dip</dimen>
+    <dimen name="abc_edit_text_inset_horizontal_material">4.0dip</dimen>
+    <dimen name="abc_edit_text_inset_top_material">10.0dip</dimen>
+    <dimen name="abc_floating_window_z">16.0dip</dimen>
+    <dimen name="abc_list_item_height_large_material">80.0dip</dimen>
+    <dimen name="abc_list_item_height_material">64.0dip</dimen>
+    <dimen name="abc_list_item_height_small_material">48.0dip</dimen>
+    <item
+        type="dimen"
+        name="abc_list_item_padding_horizontal_material">@dimen/abc_action_bar_content_inset_material</item>
+    <dimen name="abc_panel_menu_list_width">296.0dip</dimen>
+    <dimen name="abc_progress_bar_height_material">4.0dip</dimen>
+    <dimen name="abc_search_view_preferred_height">48.0dip</dimen>
+    <dimen name="abc_search_view_preferred_width">320.0dip</dimen>
+    <dimen name="abc_seekbar_track_background_height_material">2.0dip</dimen>
+    <dimen name="abc_seekbar_track_progress_height_material">2.0dip</dimen>
+    <dimen name="abc_select_dialog_padding_start_material">20.0dip</dimen>
+    <dimen name="abc_star_big">48.0dip</dimen>
+    <dimen name="abc_star_medium">36.0dip</dimen>
+    <dimen name="abc_star_small">16.0dip</dimen>
+    <dimen name="abc_switch_padding">3.0dip</dimen>
+    <dimen name="abc_text_size_body_1_material">14.0sp</dimen>
+    <dimen name="abc_text_size_body_2_material">14.0sp</dimen>
+    <dimen name="abc_text_size_button_material">14.0sp</dimen>
+    <dimen name="abc_text_size_caption_material">12.0sp</dimen>
+    <dimen name="abc_text_size_display_1_material">34.0sp</dimen>
+    <dimen name="abc_text_size_display_2_material">45.0sp</dimen>
+    <dimen name="abc_text_size_display_3_material">56.0sp</dimen>
+    <dimen name="abc_text_size_display_4_material">112.0sp</dimen>
+    <dimen name="abc_text_size_headline_material">24.0sp</dimen>
+    <dimen name="abc_text_size_large_material">22.0sp</dimen>
+    <dimen name="abc_text_size_medium_material">18.0sp</dimen>
+    <dimen name="abc_text_size_menu_header_material">14.0sp</dimen>
+    <dimen name="abc_text_size_menu_material">16.0sp</dimen>
+    <dimen name="abc_text_size_small_material">14.0sp</dimen>
+    <dimen name="abc_text_size_subhead_material">16.0sp</dimen>
+    <dimen name="abc_text_size_subtitle_material_toolbar">16.0dip</dimen>
+    <dimen name="abc_text_size_title_material">20.0sp</dimen>
+    <dimen name="abc_text_size_title_material_toolbar">20.0dip</dimen>
+    <dimen name="color_button_height">60.0dip</dimen>
+    <dimen name="color_picker_gradient_margin">14.5dip</dimen>
+    <dimen name="compat_button_inset_horizontal_material">4.0dip</dimen>
+    <dimen name="compat_button_inset_vertical_material">6.0dip</dimen>
+    <dimen name="compat_button_padding_horizontal_material">8.0dip</dimen>
+    <dimen name="compat_button_padding_vertical_material">4.0dip</dimen>
+    <dimen name="compat_control_corner_material">2.0dip</dimen>
+    <dimen name="compat_notification_large_icon_max_height">320.0dip</dimen>
+    <dimen name="compat_notification_large_icon_max_width">320.0dip</dimen>
+    <dimen name="config_min_scaling_span">12.0mm</dimen>
+    <dimen name="def_height">50.0dip</dimen>
+    <item
+        type="dimen"
+        name="disabled_alpha_material_dark">0.3</item>
+    <item
+        type="dimen"
+        name="disabled_alpha_material_light">0.26</item>
+    <dimen name="dkplayer_controller_height">46.0dip</dimen>
+    <dimen name="dkplayer_controller_icon_padding">12.0dip</dimen>
+    <dimen name="dkplayer_controller_seekbar_max_size">1.0dip</dimen>
+    <dimen name="dkplayer_controller_seekbar_size_n">14.0dip</dimen>
+    <dimen name="dkplayer_controller_seekbar_size_s">14.0dip</dimen>
+    <dimen name="dkplayer_controller_text_size">16.0sp</dimen>
+    <dimen name="dkplayer_controller_time_text_size">14.0sp</dimen>
+    <dimen name="dkplayer_default_spacing">10.0dip</dimen>
+    <dimen name="dkplayer_play_btn_size">50.0dip</dimen>
+    <dimen name="dp_10">10.0dip</dimen>
+    <dimen name="dp_4">4.0dip</dimen>
+    <dimen name="dp_40">40.0dip</dimen>
+    <dimen name="dropdown_item_divider_height">1.0px</dimen>
+    <dimen name="dropdown_item_height">44.0dip</dimen>
+    <dimen name="fastscroll_default_thickness">8.0dip</dimen>
+    <dimen name="fastscroll_margin">0.0dip</dimen>
+    <dimen name="fastscroll_minimum_range">50.0dip</dimen>
+    <dimen name="focus_border_1">1.0mm</dimen>
+    <dimen name="focus_border_2">2.0mm</dimen>
+    <item
+        type="dimen"
+        name="highlight_alpha_material_colored">0.26</item>
+    <item
+        type="dimen"
+        name="highlight_alpha_material_dark">0.2</item>
+    <item
+        type="dimen"
+        name="highlight_alpha_material_light">0.12</item>
+    <item
+        type="dimen"
+        name="hint_alpha_material_dark">0.5</item>
+    <item
+        type="dimen"
+        name="hint_alpha_material_light">0.38</item>
+    <item
+        type="dimen"
+        name="hint_pressed_alpha_material_dark">0.7</item>
+    <item
+        type="dimen"
+        name="hint_pressed_alpha_material_light">0.54</item>
+    <dimen name="item_touch_helper_max_drag_scroll_per_frame">20.0dip</dimen>
+    <dimen name="item_touch_helper_swipe_escape_max_velocity">800.0dip</dimen>
+    <dimen name="item_touch_helper_swipe_escape_velocity">120.0dip</dimen>
+    <dimen name="keyboard_accessory_chip_height">32.0dip</dimen>
+    <dimen name="keyboard_accessory_half_padding">4.0dip</dimen>
+    <dimen name="keyboard_accessory_height">48.0dip</dimen>
+    <dimen name="keyboard_accessory_padding">8.0dip</dimen>
+    <dimen name="keyboard_accessory_text_size">14.0sp</dimen>
+    <dimen name="link_preview_overlay_radius">7.0dip</dimen>
+    <dimen name="list_item_padding">8.0dip</dimen>
+    <dimen name="list_padding">0.0dip</dimen>
+    <dimen name="notification_action_icon_size">32.0dip</dimen>
+    <dimen name="notification_action_text_size">13.0sp</dimen>
+    <dimen name="notification_big_circle_margin">12.0dip</dimen>
+    <dimen name="notification_content_margin_start">8.0dip</dimen>
+    <dimen name="notification_large_icon_height">64.0dip</dimen>
+    <dimen name="notification_large_icon_width">64.0dip</dimen>
+    <dimen name="notification_main_column_padding_top">10.0dip</dimen>
+    <item
+        type="dimen"
+        name="notification_media_narrow_margin">@dimen/notification_content_margin_start</item>
+    <dimen name="notification_right_icon_size">16.0dip</dimen>
+    <dimen name="notification_right_side_padding_top">4.0dip</dimen>
+    <dimen name="notification_small_icon_background_padding">3.0dip</dimen>
+    <dimen name="notification_small_icon_size_as_large">24.0dip</dimen>
+    <dimen name="notification_subtext_size">13.0sp</dimen>
+    <dimen name="notification_top_pad">10.0dip</dimen>
+    <dimen name="notification_top_pad_large_text">5.0dip</dimen>
+    <dimen name="radius_10">8.0mm</dimen>
+    <dimen name="radius_20">20.0mm</dimen>
+    <dimen name="radius_5">5.0mm</dimen>
+    <dimen name="sp_14">14.0sp</dimen>
+    <dimen name="subtitle_corner_radius">2.0dip</dimen>
+    <dimen name="subtitle_outline_width">2.0dip</dimen>
+    <dimen name="subtitle_shadow_offset">2.0dip</dimen>
+    <dimen name="subtitle_shadow_radius">2.0dip</dimen>
+    <dimen name="tooltip_corner_radius">2.0dip</dimen>
+    <dimen name="tooltip_horizontal_padding">16.0dip</dimen>
+    <dimen name="tooltip_margin">8.0dip</dimen>
+    <dimen name="tooltip_precise_anchor_extra_offset">8.0dip</dimen>
+    <dimen name="tooltip_precise_anchor_threshold">96.0dip</dimen>
+    <dimen name="tooltip_vertical_padding">6.5dip</dimen>
+    <dimen name="tooltip_y_offset_non_touch">0.0dip</dimen>
+    <dimen name="tooltip_y_offset_touch">16.0dip</dimen>
+    <dimen name="ts_100">100.0mm</dimen>
+    <dimen name="ts_16">16.0mm</dimen>
+    <dimen name="ts_20">20.0mm</dimen>
+    <dimen name="ts_22">22.0mm</dimen>
+    <dimen name="ts_24">24.0mm</dimen>
+    <dimen name="ts_26">26.0mm</dimen>
+    <dimen name="ts_28">28.0mm</dimen>
+    <dimen name="ts_30">30.0mm</dimen>
+    <dimen name="ts_34">34.0mm</dimen>
+    <dimen name="ts_40">40.0mm</dimen>
+    <dimen name="ts_50">50.0mm</dimen>
+    <dimen name="vs_0">0.0mm</dimen>
+    <dimen name="vs_1">1.0mm</dimen>
+    <dimen name="vs_10">10.0mm</dimen>
+    <dimen name="vs_100">100.0mm</dimen>
+    <dimen name="vs_108">108.0mm</dimen>
+    <dimen name="vs_12">12.0mm</dimen>
+    <dimen name="vs_120">120.0mm</dimen>
+    <dimen name="vs_128">128.0mm</dimen>
+    <dimen name="vs_130">130.0mm</dimen>
+    <dimen name="vs_140">140.0mm</dimen>
+    <dimen name="vs_15">15.0mm</dimen>
+    <dimen name="vs_150">150.0mm</dimen>
+    <dimen name="vs_160">160.0mm</dimen>
+    <dimen name="vs_162">162.0mm</dimen>
+    <dimen name="vs_165">165.0mm</dimen>
+    <dimen name="vs_170">170.0mm</dimen>
+    <dimen name="vs_180">180.0mm</dimen>
+    <dimen name="vs_190">190.0mm</dimen>
+    <dimen name="vs_2">2.0mm</dimen>
+    <dimen name="vs_20">20.0mm</dimen>
+    <dimen name="vs_200">200.0mm</dimen>
+    <dimen name="vs_20_">-20.0mm</dimen>
+    <dimen name="vs_214">214.0mm</dimen>
+    <dimen name="vs_220">220.0mm</dimen>
+    <dimen name="vs_230">230.0mm</dimen>
+    <dimen name="vs_24">24.0mm</dimen>
+    <dimen name="vs_240">240.0mm</dimen>
+    <dimen name="vs_250">250.0mm</dimen>
+    <dimen name="vs_25_">-25.0mm</dimen>
+    <dimen name="vs_270">270.0mm</dimen>
+    <dimen name="vs_28">28.0mm</dimen>
+    <dimen name="vs_280">280.0mm</dimen>
+    <dimen name="vs_3">3.0mm</dimen>
+    <dimen name="vs_30">30.0mm</dimen>
+    <dimen name="vs_300">300.0mm</dimen>
+    <dimen name="vs_320">320.0mm</dimen>
+    <dimen name="vs_340">340.0mm</dimen>
+    <dimen name="vs_35">35.0mm</dimen>
+    <dimen name="vs_360">360.0mm</dimen>
+    <dimen name="vs_390">390.0mm</dimen>
+    <dimen name="vs_4">4.0mm</dimen>
+    <dimen name="vs_40">40.0mm</dimen>
+    <dimen name="vs_400">400.0mm</dimen>
+    <dimen name="vs_410">410.0mm</dimen>
+    <dimen name="vs_420">420.0mm</dimen>
+    <dimen name="vs_440">440.0mm</dimen>
+    <dimen name="vs_45">45.0mm</dimen>
+    <dimen name="vs_470">470.0mm</dimen>
+    <dimen name="vs_48">48.0mm</dimen>
+    <dimen name="vs_480">480.0mm</dimen>
+    <dimen name="vs_4_">-4.0mm</dimen>
+    <dimen name="vs_5">5.0mm</dimen>
+    <dimen name="vs_50">50.0mm</dimen>
+    <dimen name="vs_570">570.0mm</dimen>
+    <dimen name="vs_6">6.0mm</dimen>
+    <dimen name="vs_60">60.0mm</dimen>
+    <dimen name="vs_600">600.0mm</dimen>
+    <dimen name="vs_60_">-60.0mm</dimen>
+    <dimen name="vs_610">610.0mm</dimen>
+    <dimen name="vs_640">640.0mm</dimen>
+    <dimen name="vs_7">7.0mm</dimen>
+    <dimen name="vs_70">70.0mm</dimen>
+    <dimen name="vs_720">720.0mm</dimen>
+    <dimen name="vs_76">76.0mm</dimen>
+    <dimen name="vs_8">8.0mm</dimen>
+    <dimen name="vs_80">80.0mm</dimen>
+    <dimen name="vs_90">90.0mm</dimen>
+    <dimen name="vs_960">960.0mm</dimen>
+    <dimen name="ts_xu">38.0mm</dimen>
+    <dimen name="ts_43">43.0mm</dimen>
+    <dimen name="ts_60">60.0mm</dimen>
+    <dimen name="vs_14">14.0mm</dimen>
+    <dimen name="vs_xu">30.899994mm</dimen>
 </resources>
