--- a/app/src/main/res/drawable/shape_dialog_filter_bg.xml
+++ b/app/src/main/res/drawable/shape_dialog_filter_bg.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<!--    筛选页背景颜色-->
     <corners
         android:topLeftRadius="@dimen/vs_10"
-        android:topRightRadius="@dimen/vs_10" />
-    <solid android:color="@color/color_99FFFFFF" />
+        android:topRightRadius="@dimen/vs_10"/>
+    <gradient
+        android:startColor="@color/color_85000000"
+        android:endColor="@color/color_90000000"
+        android:angle="90.0"/>
 </shape>
