--- a/app/src/main/res/drawable/seekbar_style.xml
+++ b/app/src/main/res/drawable/seekbar_style.xml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
-
         <shape>
-            <solid android:color="#FF000000" />
-            <stroke android:width="1dp"
-                android:color="#F997C7"/>
-            <corners android:radius="0dp" />
+            <solid android:color="#ff000000"/>
+            <stroke
+                android:width="1.0dip"
+                android:color="#ff1890ff"/>
+            <corners android:radius="0.0dip"/>
         </shape>
-
     </item>
     <item android:id="@android:id/secondaryProgress">
         <clip>
             <shape>
-                <solid android:color="#FF76BBDB" />
-                <corners android:radius="5dp" />
+                <solid android:color="#ff76bbdb"/>
+                <corners android:radius="5.0dip"/>
             </shape>
         </clip>
     </item>
-
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <solid android:color="#F997C7" />
-
-                <corners android:radius="0dp" />
+                <solid android:color="#ff1890ff"/>
+                <corners android:radius="0.0dip"/>
             </shape>
         </clip>
     </item>
-
 </layer-list>
