--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -3,12 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@id/rootView"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:orientation="vertical"
-        android:id="@id/tv_top_l_container"
+        android:id="@+id/tv_top_l_container"
         android:background="@drawable/shape_dialog_filter_bg_1"
         android:tag="tv_top_container"
         android:visibility="gone"
@@ -22,7 +22,7 @@
             android:textColor="@android:color/white"
             android:ellipsize="end"
             android:layout_gravity="left"
-            android:id="@id/tv_info_name1"
+            android:id="@+id/tv_info_name1"
             android:paddingLeft="@dimen/vs_30"
             android:paddingTop="@dimen/vs_30"
             android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
             android:textColor="@android:color/white"
             android:ellipsize="end"
             android:layout_gravity="left"
-            android:id="@id/tv_videosize"
+            android:id="@+id/tv_videosize"
             android:tag="vod_video_size"
             android:paddingLeft="@dimen/vs_30"
             android:layout_width="wrap_content"
@@ -46,7 +46,7 @@
     <LinearLayout
         android:layout_gravity="right"
         android:orientation="vertical"
-        android:id="@id/tv_top_r_container"
+        android:id="@+id/tv_top_r_container"
         android:tag="tv_top_container"
         android:visibility="gone"
         android:layout_width="wrap_content"
@@ -58,7 +58,7 @@
             android:textColor="@android:color/white"
             android:ellipsize="end"
             android:layout_gravity="right"
-            android:id="@id/tv_sys_time"
+            android:id="@+id/tv_sys_time"
             android:tag="vod_control_pause_time"
             android:paddingTop="@dimen/vs_30"
             android:paddingRight="@dimen/vs_15"
@@ -68,7 +68,7 @@
             android:maxLines="1"/>
     </LinearLayout>
     <com.github.tvbox.osc.subtitle.widget.SimpleSubtitleView
-        android:id="@id/subtitle_view"
+        android:id="@+id/subtitle_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -85,7 +85,7 @@
         android:gravity="center_vertical"
         android:layout_gravity="bottom"
         android:orientation="vertical"
-        android:id="@id/bottom_container"
+        android:id="@+id/bottom_container"
         android:background="@drawable/shape_dialog_filter_bg"
         android:paddingLeft="@dimen/vs_20"
         android:paddingTop="@dimen/vs_20"
@@ -120,7 +120,7 @@
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/play_next"
+                android:id="@+id/play_next"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -133,7 +133,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/play_pre"
+                android:id="@+id/play_pre"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -146,7 +146,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/play_retry"
+                android:id="@+id/play_retry"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -159,7 +159,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/play_refresh"
+                android:id="@+id/play_refresh"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -172,7 +172,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/play_scale"
+                android:id="@+id/play_scale"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -185,7 +185,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/play_speed"
+                android:id="@+id/play_speed"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -198,7 +198,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/play_player"
+                android:id="@+id/play_player"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -211,7 +211,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/play_ijk"
+                android:id="@+id/play_ijk"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -224,7 +224,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/play_time_start_end_text"
+                android:id="@+id/play_time_start_end_text"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -236,7 +236,7 @@
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/play_time_start"
+                android:id="@+id/play_time_start"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -249,7 +249,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/play_time_end"
+                android:id="@+id/play_time_end"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -263,7 +263,7 @@
                 android:textSize="@dimen/ts_20"/>
             <!--添加片头片尾重置按钮-->
             <TextView
-                android:id="@id/play_time_reset"
+                android:id="@+id/play_time_reset"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -276,7 +276,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/zimu_select"
+                android:id="@+id/zimu_select"
                 android:singleLine="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -289,7 +289,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/audio_track_select"
+                android:id="@+id/audio_track_select"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/vs_5"
@@ -302,7 +302,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20"/>
             <TextView
-                android:id="@id/landscape_portrait"
+                android:id="@+id/landscape_portrait"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/vs_5"
@@ -319,7 +319,7 @@
                 android:textColor="@android:color/white"
                 android:background="@drawable/button_dialog_main_1"
                 android:layout_gravity="right"
-                android:id="@id/tv_play_load_net_speed_right_top"
+                android:id="@+id/tv_play_load_net_speed_right_top"
                 android:tag="vod_control_pause_time"
                 android:padding="@dimen/vs_10"
                 android:paddingRight="@dimen/vs_20"
@@ -330,7 +330,7 @@
                 android:maxLines="1"/>
         </LinearLayout>
         <LinearLayout
-            android:id="@id/parse_root"
+            android:id="@+id/parse_root"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/vs_10"
@@ -348,7 +348,7 @@
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/ts_20"/>
             <com.owen.tvrecyclerview.widget.TvRecyclerView
-                android:id="@id/mGridView"
+                android:id="@+id/mGridView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipChildren="false"
@@ -363,7 +363,7 @@
             android:layout_marginBottom="@dimen/vs_10"
             android:orientation="horizontal">
             <TextView
-                android:id="@id/curr_time"
+                android:id="@+id/curr_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingEnd="@dimen/vs_10"
@@ -372,7 +372,7 @@
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/ts_20"/>
             <SeekBar
-                android:id="@id/seekBar"
+                android:id="@+id/seekBar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -390,7 +390,7 @@
                 android:thumb="@drawable/shape_player_control_vod_seek_thumb"
                 android:thumbOffset="@dimen/vs_0"/>
             <TextView
-                android:id="@id/total_time"
+                android:id="@+id/total_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/vs_10"
@@ -401,7 +401,7 @@
         </LinearLayout>
     </LinearLayout>
     <FrameLayout
-        android:id="@id/tv_pause_container"
+        android:id="@+id/tv_pause_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:tag="vod_control_pause"
@@ -416,7 +416,7 @@
             android:layout_marginTop="@dimen/vs_10"
             android:orientation="vertical">
             <TextView
-                android:id="@id/tv_info_name"
+                android:id="@+id/tv_info_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
@@ -445,7 +445,7 @@
                 android:focusableInTouchMode="false"
                 android:src="@drawable/icon_play"/>
             <TextView
-                android:id="@id/tv_pause_progress_text"
+                android:id="@+id/tv_pause_progress_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -459,7 +459,7 @@
         </LinearLayout>
     </FrameLayout>
     <TextView
-        android:id="@id/tv_slide_progress_text"
+        android:id="@+id/tv_slide_progress_text"
         android:layout_width="@dimen/vs_200"
         android:layout_height="@dimen/vs_100"
         android:layout_gravity="center"
@@ -474,7 +474,7 @@
         android:visibility="gone"
         tools:text="100"/>
     <LinearLayout
-        android:id="@id/tv_progress_container"
+        android:id="@+id/tv_progress_container"
         android:layout_width="@dimen/vs_280"
         android:layout_height="@dimen/vs_200"
         android:layout_gravity="center"
@@ -486,14 +486,14 @@
         android:visibility="gone"
         tools:visibility="visible">
         <ImageView
-            android:id="@id/tv_progress_icon"
+            android:id="@+id/tv_progress_icon"
             android:layout_width="@dimen/vs_60"
             android:layout_height="@dimen/vs_60"
             android:focusable="false"
             android:focusableInTouchMode="false"
             tools:src="@drawable/icon_back"/>
         <TextView
-            android:id="@id/tv_progress_text"
+            android:id="@+id/tv_progress_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -514,7 +514,7 @@
         android:tag="vod_control_loading"
         android:visibility="gone"/>
     <TextView
-        android:id="@id/tv_play_load_net_speed"
+        android:id="@+id/tv_play_load_net_speed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -526,7 +526,7 @@
         android:textColor="@color/color_FFFFFF"
         android:textSize="@dimen/ts_20"/>
     <ImageView
-        android:id="@id/tv_back"
+        android:id="@+id/tv_back"
         android:layout_width="@dimen/vs_80"
         android:layout_height="@dimen/vs_80"
         android:layout_gravity="left|center"
@@ -536,7 +536,7 @@
         android:src="@drawable/icon_back"
         android:visibility="invisible"/>
     <ImageView
-        android:id="@id/tv_lock"
+        android:id="@+id/tv_lock"
         android:layout_width="@dimen/vs_80"
         android:layout_height="@dimen/vs_80"
         android:layout_gravity="right|center"
