--- a/app/src/main/res/drawable/shape_thumb_year.xml
+++ b/app/src/main/res/drawable/shape_thumb_year.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/color_6C3D3D3D" />
+        android:color="@color/color_99000000" />
     <corners
         android:radius="5.0mm" />
 </shape>
