--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    android:layout_width="@dimen/vs_720"
-    android:layout_height="fill_parent"
+    android:layout_width="@dimen/vs_710"
+    android:layout_height="@dimen/vs_570"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
@@ -9,8 +9,8 @@
         android:orientation="vertical"
         android:id="@+id/root"
         android:background="@drawable/shape_dialog_pg_search_checkbox"
-        android:layout_width="@dimen/vs_420"
-        android:layout_height="wrap_content">
+        android:layout_width="@dimen/vs_440"
+        android:layout_height="@dimen/vs_570">
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
@@ -29,7 +29,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="全选"
-                android:layout_marginLeft="@dimen/vs_150"
+                android:layout_marginLeft="@dimen/vs_148"
                 android:layout_marginTop="@dimen/vs_10"
                 android:layout_weight="1"/>
             <TextView
@@ -46,8 +46,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/vs_10"
-                android:layout_marginLeft="@dimen/vs_10"
-                android:layout_marginRight="@dimen/vs_150"
+                android:layout_marginLeft="@dimen/vs_15"
+                android:layout_marginRight="@dimen/vs_148"
                 android:text="全不选"/>
         </LinearLayout>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
@@ -55,6 +55,6 @@
             android:layout_gravity="center"
             android:id="@+id/mGridView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="@dimen/vs_570"/>
     </LinearLayout>
 </FrameLayout>
