--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -115,7 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/vs_5"
-                android:text=""
+                android:text="读取中"
                 android:id="@+id/mxuplay"  
                 android:focusable="true" 
                 android:padding="@dimen/vs_10"   
